added basic game logic

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.1.7",
     "react-router-dom": "^6.27.0",
+    "recoil": "^0.7.7",
     "sass": "^1.80.1"
   },
   "devDependencies": {
